[package]
name = "close-account"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "close_account"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.21.0", features = ["init-if-needed"] }
anchor-spl = {version = "0.21.0"}
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
solana-program = "1.10.0"
